# flashcards-selenium

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2023_11_28_1314-fd0b55b207fb_create_flashcards_table.py
docker/: app.Dockerfile  migration.Dockerfile  runtime.Dockerfile
docs/: api.md  architecture.dsl
src/: main.py  settings.py
src/adapters/: __init__.py  google_flashcard_repository.py  local_flashcard_repository.py  orm.py
src/api/: __init__.py  api.py  probes.py
src/api/endpoints/: flashcards.py
src/containers/: database_engine.py  google_flashcard_repository.py  message_bus.py  session_factory.py  unit_of_work.py  web_scraper.py  wiring.py
src/domain/: __init__.py  commands.py  events.py  exceptions.py  messages.py  model.py  schemata.py
src/routines/: __init__.py  database_engine.py  mappers.py  message_bus.py
src/services/: database_engine.py  message_bus.py  session_factory.py  unit_of_work.py  web_scraper.py
src/services/handlers/: __init__.py  command_handlers.py  event_handlers.py
src/views/: __init__.py  flashcards.py
tests/: conftest.py
tests/e2e/: conftest.py  test_flashcards_delete.py  test_flashcards_get.py  test_probes.py
tests/integration/: conftest.py  test_local_flashcard_repository_create.py  test_local_flashcard_repository_delete.py  test_local_flashcard_repository_read.py  test_mappers.py  test_unit_of_work.py  test_web_scraper.py
tests/unit/: conftest.py  test_containers_wiring.py  test_events.py  test_flashcards_views.py  test_google_flashcard_repository_read.py  test_handlers.py  test_main.py  test_message_bus.py  test_model.py  test_schemata.py  test_session_factory.py  test_settings.py
